--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/vuetify": "0.5.5",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
-    "@nuxtjs/vuetify": "0.5.5",
-    "@nuxtjs/axios": "^5.3.6",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vue2-filters": "^0.6.0"
   },
   "devDependencies": {
     "stylus": "^0.54.5",
